# OP-TEE_Application

./: Android.mk  CMakeLists.txt  Pendientes.md  README.md  sampletext.txt
group8-TEE/: Android.mk  CMakeLists.txt  README.md
group8-TEE/host/: Makefile  light_crypto_host.c  main.c  password.c
group8-TEE/host/include/: crypto.h  main_header.h  password.h  secret.h
group8-TEE/optee.Makefile/: Makefile
group8-TEE/ta/: Makefile  light_crypto_TA.c  my_ta.c  pass_validation_TA.c  secret_manag_TA.c  sub.mk  user_ta_header_defines.h
group8-TEE/ta/include/: my_ta.h  secret_manag_TA.h
group8-TEE/test/: fuzzingInput.sh
host/: Makefile  crypto.c  light_crypto_host.c  main.c  password.c  secret.c
host/include/: crypto.h  light_crypto_host.h  main_header.h  password.h  secret.h
interface/: Makefile  test_suite.c
ta/: Android.mk  light_crypto_TA.c  my_ta.c  my_ta.h   pass_validation_TA.c  secret_manag_TA.c  sub.mk  user_ta_header_defines.h
ta/include/: light_crypto_TA.h  my_ta.h  pass_validation_TA.h  secret_manag_TA.h
test/: README.md  fuzzingInput.py  memory_mapping.py  raceCondition.sh  test1.txt  test2.txt  test3.txt  timeAnalisys.sh  timing.py
tests/: pytest.py  serialtest.py
